fix grid gap

--- a/src/grid/grid-by-grid.scss
+++ b/src/grid/grid-by-grid.scss
@@ -4,7 +4,7 @@
   $selector-string: map-get($options, 'selector-string');
   $attr-query: #{'[class*='+$selector-string+'-]'};
 
-  $x-attr-query: #{'[class~='+$selector-string+'x]'};
+  $x-attr-query: #{'[class~='+$selector-string+'-x]'};
 
   @at-root {
 
